[ZEPPELIN-2479] Fix incorrect tooltip view inside of version control menu
### What is this PR for?
This is to fix incorrect appearance of tooltip inside version control menu

### What type of PR is it?
Improvement

### Todos
* [x] - fix/remove tooltip

### What is the Jira issue?
[ZEPPELIN-2479](https://issues.apache.org/jira/browse/ZEPPELIN-2479)

### How should this be tested?
go to `version control` menu in notebook action bar of note

### Screenshots (if appropriate)
before:
<img width="689" alt="screen shot 2017-05-02 at 3 32 23 pm" src="https://cloud.githubusercontent.com/assets/1642088/25606467/62f0901c-2f4c-11e7-95ef-c22f1df410be.png">

after:
![screen shot 2017-05-02 at 6 55 24 pm](https://cloud.githubusercontent.com/assets/1642088/25613839/aac216a4-2f6a-11e7-8cab-a77ddb48382b.png)

### Questions:
* Does the licenses files need update? no
* Is there breaking changes for older versions? no
* Does this needs documentation? no

Author: Khalid Huseynov <khalidhnv@gmail.com>

Closes #2306 from khalidhuseynov/fix/ZEPPELIN-2479 and squashes the following commits:

ac4e651 [Khalid Huseynov] add css class

--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -131,6 +131,8 @@ limitations under the License.
                         ng-hide="viewOnly"
                         ng-click="checkpointNote(note.checkpoint.message)"
                         style="margin-left: 4px;"
+                        tooltip-append-to-body="true"
+                        tooltip-class="revisionTooltip"
                         tooltip-placement="bottom" uib-tooltip="Commit this note">Commit
                 </button>
               </div>
