--- a/zeppelin-web/src/app/notebook/paragraph/result/result.html
+++ b/zeppelin-web/src/app/notebook/paragraph/result/result.html
@@ -27,7 +27,7 @@ limitations under the License.
          ng-style="getPointerEvent()">
       <!-- graph setting -->
       <div class="option lightBold" style="overflow: visible;"
-           ng-show="graphMode!='table' && config.graph.optionOpen && !asIframe && !viewOnly">
+           ng-show="config.graph.optionOpen && !asIframe && !viewOnly">
         <div ng-repeat="viz in builtInTableDataVisualizationList track by $index"
              id="trsetting{{id}}_{{viz.id}}"
              ng-show="graphMode == viz.id"></div>
