fix: DON'T set bottom-margin for markdown table

--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.css
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.css
@@ -44,7 +44,7 @@
   word-wrap: break-word !important;
 }
 
-.paragraph table {
+.paragraph table:not(.markdown-body table) {
   margin-bottom: 0;
 }
 
