fix: Remove invalid ng-if

--- a/zeppelin-web/src/app/tabledata/pivot_settings.html
+++ b/zeppelin-web/src/app/tabledata/pivot_settings.html
@@ -26,7 +26,7 @@ All fields:
   </ul>
 </div>
 
-<div class="row" ng-if="graphMode!='scatterChart'">
+<div class="row">
   <div class="col-md-4">
     <span class="columns lightBold">
       Keys
