--- a/zeppelin-web/src/app/notebook/paragraph/result/display-table.css
+++ b/zeppelin-web/src/app/notebook/paragraph/result/display-table.css
@@ -25,3 +25,25 @@
 .ui-grid-menu {
   overflow: auto; /** enable scrollbar in column menu */
 }
+
+/** disable alternative color for even lows in a table */
+.ui-grid-row:nth-child(even) .ui-grid-cell {
+  background-color: #f6f6f6 !important;
+}
+
+/** support `height: auto` for cells */
+.ui-grid-viewport .ui-grid-cell-contents {
+  word-wrap: break-word;
+  white-space: normal !important;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.ui-grid-row, .ui-grid-cell {
+  height: auto !important;
+}
+
+.ui-grid-row div[role=row] {
+  display: flex ;
+  align-content: stretch;
+}
+
