Hide pagination btn if there is only 1 page

--- a/zeppelin-web/src/app/helium/helium.css
+++ b/zeppelin-web/src/app/helium/helium.css
@@ -225,3 +225,7 @@
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
 }
+
+.hide-last-boundaries.pagination:only-of-type {
+  display: none;
+}
