--- a/zeppelin-web/src/components/editor/ace.editor.directive.html
+++ b/zeppelin-web/src/components/editor/ace.editor.directive.html
@@ -13,13 +13,7 @@ limitations under the License.
 -->
 
 <div class="editor"
-     ui-ace="{ advanced: {
-                 highlightActiveLine: true,
-                 highlightGutterLine: false,
-               },
-               onLoad : onLoad,
-               require : ['ace/ext/language_tools']
-             }"
+     ui-ace="{ onLoad : onLoad, require : ['ace/ext/language_tools'] }"
      ng-model="paragraph.text"
      ng-class="{'paragraph-disable': paragraph.status == 'RUNNING' || paragraph.status == 'PENDING' || revisionView === true,
            'paragraph-text--dirty' : dirtyText !== originalText && dirtyText !== undefined}">
