feat: style modal-footer for note name dialog

--- a/zeppelin-web/src/components/noteName-create/note-name-dialog.html
+++ b/zeppelin-web/src/components/noteName-create/note-name-dialog.html
@@ -45,10 +45,10 @@ limitations under the License.
       </div>
       <div class="modal-footer">
         <button type="button" id="createNoteButton"
-                class="btn btn-default"
+                class="btn btn-primary"
                 data-dismiss="modal" ng-click="notenamectrl.createNote()">
-          <span ng-show="!notenamectrl.clone">Create Note</span>
-          <span ng-show="notenamectrl.clone">Clone Note</span>
+          <span ng-show="!notenamectrl.clone">Create</span>
+          <span ng-show="notenamectrl.clone">Clone</span>
         </button>
       </div>
     </div>
