feat: Style panel desc

--- a/zeppelin-web/src/components/noteName-create/note-name-dialog.html
+++ b/zeppelin-web/src/components/noteName-create/note-name-dialog.html
@@ -48,7 +48,11 @@ limitations under the License.
             </select>
           </div>
         </div> <!-- end: form-group -->
-        <div>Use '/' to create folders. Example: /NoteDirA/Note1</div>
+        <div class="panel panel-default note-name-desc-panel">
+          <div class="panel-heading">
+            Use '/' to create folders. Example: /NoteDirA/Note1
+          </div>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" id="createNoteButton"
