--- a/zeppelin-web/src/components/rename/rename.html
+++ b/zeppelin-web/src/components/rename/rename.html
@@ -11,28 +11,29 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div id="renameModal" class="modal fade" role="dialog"
-     tabindex="-1">
+<div id="renameModal" class="modal fade" role="dialog" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
+      <!-- modal-header -->
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">{{title}}</h4>
       </div>
+
+      <!-- modal-body -->
       <div class="modal-body">
         <label ng-if="isValid">Please enter a new name</label>
-          <label class="text-danger" ng-if="!isValid">Please enter a valid name</label>
+        <label class="text-danger" ng-if="!isValid">Please enter a valid name</label>
         <div class="form-group" ng-class="{'has-error': !isValid}">
           <input type="text" class="form-control"
-            ng-model="params.newName" ng-change="validate()"
-            ng-keyup="$event.keyCode == 13 && isValid && rename()" />
+                 ng-model="params.newName" ng-change="validate()"
+                 ng-keyup="$event.keyCode == 13 && isValid && rename()" />
         </div>
-
       </div>
       <div class="modal-footer">
         <div>
           <button type="button" class="btn btn-default btn-primary"
-            ng-click="rename()" ng-class="{'disabled': !isValid}">
+                  ng-click="rename()" ng-class="{'disabled': !isValid}">
             Rename
           </button>
         </div>
