feat: Style rename dialog body

--- a/zeppelin-web/src/components/rename/rename.html
+++ b/zeppelin-web/src/components/rename/rename.html
@@ -15,15 +15,15 @@ limitations under the License.
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- modal-header -->
-      <div class="modal-header">
+      <div class="modal-header modal-header-rename">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">{{title}}</h4>
       </div>
 
       <!-- modal-body -->
-      <div class="modal-body">
+      <div class="modal-body modal-body-rename">
         <label ng-if="isValid">Please enter a new name</label>
-        <label class="text-danger" ng-if="!isValid">Please enter a valid name</label>
+        <label ng-if="!isValid" class="text-danger">Please enter a valid name</label>
         <div class="form-group" ng-class="{'has-error': !isValid}">
           <input type="text" class="form-control"
                  ng-model="params.newName" ng-change="validate()"
