--- a/zeppelin-web/src/components/noteName-import/note-import-dialog.html
+++ b/zeppelin-web/src/components/noteName-import/note-import-dialog.html
@@ -11,23 +11,24 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div id="noteImportModal" class="modal fade" role="dialog"
-     tabindex="-1" data-backdrop="static" data-keyboard="false">
-  <div class="modal-dialog" >
+<div id="noteImportModal" class="modal fade" role="dialog" tabindex="-1"
+     data-backdrop="static" data-keyboard="false">
 
-    <!-- Modal content-->
+  <div class="modal-dialog">
     <div class="modal-content" id="NoteImportCtrl" ng-init="NoteImportInit">
-      <div class="modal-header">
-        <!-- close button -->
-        <button type="button" class="close" data-dismiss="modal" ng-click="noteimportctrl.resetFlags()">&times;</button>
 
-        <h4 class="modal-title">Import new note</h4>
+      <!-- modal-header -->
+      <div class="modal-header modal-header-import">
+        <button type="button" class="close" data-dismiss="modal"
+                ng-click="noteimportctrl.resetFlags()">&times;</button>
+        <h4 class="modal-title">Import New Note</h4>
       </div>
-      <div class="modal-body">
 
+      <!-- modal-body -->
+      <div class="modal-body">
         <div class="form-group">
           <label for="noteImportName">Import AS</label>
-          <input placeholder="Note name" type="text" class="form-control" id="noteImportName"
+          <input placeholder="Insert Note Name" type="text" class="form-control" id="noteImportName"
                  ng-model="note.noteImportName" />
         </div>
         <div class="form-group">
