--- a/zeppelin-web/src/components/noteName-import/note-import-dialog.html
+++ b/zeppelin-web/src/components/noteName-import/note-import-dialog.html
@@ -60,7 +60,7 @@ limitations under the License.
         <div class="form-group slide-right" ng-show="note.step2">
 
           <label for="noteImportUrl">URL</label>
-          <input placeholder="Note url" type="text" class="form-control" id="noteImportUrl"
+          <input placeholder="Note URL" type="text" class="form-control" id="noteImportUrl"
                  ng-model="note.importUrl" />
         </div>
 
