--- a/zeppelin-web/src/app/notebook/paragraph/paragraph.html
+++ b/zeppelin-web/src/app/notebook/paragraph/paragraph.html
@@ -15,27 +15,30 @@ limitations under the License.
 <div id="{{paragraph.id}}_container"
      ng-class="{'paragraph': !asIframe, 'paragraphAsIframe': asIframe}">
 
-  <div ng-if="paragraph.config.title"
-       id="{{paragraph.id}}_title"
-       ng-controller="ElasticInputCtrl as input"
-       class="title">
-    <input type="text"
-           pu-elastic-input
-           style="min-width: 400px; max-width: 80%;"
-           placeholder="Untitled"
-           ng-model="paragraph.title"
-           ng-if="input.showEditor"
-           ng-escape="input.showEditor = false; paragraph.title = oldTitle;"
-           ng-blur="setTitle(paragraph); input.showEditor = false"
-           ng-enter="setTitle(paragraph); input.showEditor = false"
-           focus-if="input.showEditor" />
-    <div ng-click="input.showEditor = !asIframe && !viewOnly && !revisionView; oldTitle = paragraph.title;"
-         ng-show="!input.showEditor"
-         ng-bind-html="paragraph.title || 'Untitled'">
+  <div>
+    <div ng-show="paragraph.config.title"
+         id="{{paragraph.id}}_title"
+         ng-controller="ElasticInputCtrl as input"
+         class="title">
+      <input type="text"
+             pu-elastic-input
+             style="min-width: 400px; max-width: 80%;"
+             placeholder="Untitled"
+             ng-model="paragraph.title"
+             ng-if="input.showEditor"
+             ng-escape="input.showEditor = false; paragraph.title = oldTitle;"
+             ng-blur="setTitle(paragraph); input.showEditor = false"
+             ng-enter="setTitle(paragraph); input.showEditor = false"
+             focus-if="input.showEditor" />
+      <div ng-click="input.showEditor = !asIframe && !viewOnly && !revisionView; oldTitle = paragraph.title;"
+           ng-show="!input.showEditor"
+           ng-bind-html="paragraph.title || 'Untitled'">
+      </div>
     </div>
-  </div>
 
-  <div ng-include src="'app/notebook/paragraph/paragraph-control.html'"></div>
+    <div ng-include src="'app/notebook/paragraph/paragraph-control.html'"></div>
+    <div style="display: inline-block; clear: both;"></div>
+  </div>
 
   <div>
     <div ng-if="!paragraph.config.editorHide && !viewOnly" style="margin-bottom:3px;">
