--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -35,7 +35,6 @@ limitations under the License.
     <div class="job-search-tool">
       <div class="form-inline">
         <span class="btn-group">
-
           <!-- search tool: input -->
           <div class="input-group search-input">
             <input class="form-control btn-xs"
@@ -46,7 +45,7 @@ limitations under the License.
                    ng-change="doFiltering(jobInfomations, filterConfig)" />
           </div>
 
-          <!-- search tool: interpreter name dropdown -->
+          <!-- search tool: default interpreter dropdown -->
           <div class="btn btn-default dropdown-toggle"
                data-toggle="dropdown">
             <span>
@@ -56,8 +55,7 @@ limitations under the License.
               <span style="clear: both;"></span>
             </span>
           </div>
-          <ul id="search-tool-interpreter-dropdown-content"
-              class="dropdown-menu dropdown-menu-right" role="menu">
+          <ul class="dropdown-menu dropdown-menu-right search-tool-dropdown-content" role="menu">
            <li ng-repeat="interpreterOption in activeInterpreters">
              <a ng-click="setFilterValue(interpreterOption.value)"
                 ng-style="(filterValueToName(interpreterOption.value) === 'ALL' || filterValueToName(interpreterOption.value) === 'NONE') ? { 'font-weight': 500 } : {}"
@@ -67,6 +65,25 @@ limitations under the License.
            </li>
           </ul>
 
+        </span>
+
+        <span class="btn-group">
+          <!-- search tool: date dropdown -->
+          <div class="date-sort-button btn btn-default dropdown-toggle" data-toggle="dropdown">
+            <span>
+              <span class="dropdown-text-desc">Sort: </span>
+              <span class="dropdown-text-value">{{sorter.currentDateSorter}}</span>
+              <span class="caret" style="margin-top: 8px; float: right;"></span>
+              <span style="clear: both;"></span>
+            </span>
+          </div>
+          <ul class="dropdown-menu dropdown-menu-right search-tool-dropdown-content" role="menu">
+           <li ng-repeat="dateSorter in sorter.AvailableDateSorter">
+             <a ng-click="setJobDateSorter(dateSorter)" class="dropdown-list-value">
+               {{dateSorter}}
+             </a>
+           </li>
+          </ul>
         </span>
       </div>
     </div>
